Fix some spacing issues

--- a/styles/utils.module.scss
+++ b/styles/utils.module.scss
@@ -6,3 +6,7 @@
 .noMb {
   margin-bottom: 0 !important;
 }
+
+.mt-1{
+  margin-top: 1rem;
+}
